--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,47 @@
 {
+  "guides": {
+    "more": "Подробнее",
+    "registration": {
+      "title": "Как зарегистрироваться в платформе",
+      "description": "Подробный гайд по регистрации в платформе Blogix. Инструкция поможет вам быстро и безопасно зарегистрироваться в платформе."
+    },
+    "start_campaign": {
+      "title": "Как запустить рекламную кампанию",
+      "description": "Подробный гайд по запуску рекламной кампании в платформе Blogix. Запуск. Сохранение. Генерация отчета"
+    },
+    "turnkey_campaign": {
+      "title": "Как запустить рекламную кампанию под ключ",
+      "description": "Подробный гайд по запуску рекламной кампании с помощью менеджеров платформы Blogix с готовыми тарифами"
+    },
+    "connect_organization": {
+      "title": "Как подключить организацию",
+      "description": "Подробный гайд по добавлению организации в ваш аккаунт. Можно подключить как юридическое лицо, так и самозанятого, так и ИП."
+    },
+    "topup_balance": {
+      "title": "Как пополнить баланс перечислением",
+      "description": "Подробный гайд по пополнению баланса перечислением средств на ваш баланс. Инструкция поможет вам быстро и безопасно пополнить баланс вашего аккаунта."
+    },
+    "add_platform": {
+      "title": "Как добавить площадку",
+      "description": "Этот гайд поможет вам добавить площадку в наш каталог, чтобы другие пользователи могли найти её и начать сотрудничество с вами."
+    },
+    "topup_balance_card": {
+      "title": "Как пополнить баланс картой",
+      "description": "Подробный гайд по пополнению баланса картой. Инструкция поможет вам быстро и безопасно пополнить баланс вашего аккаунта."
+    },
+    "refund_request": {
+      "title": "Как оформить возврат средств",
+      "description": "Подробный гайд по оформлению возврата средств. Инструкция поможет вам быстро и безопасно оформить возврат средств."
+    },
+    "blogger_accept_order": {
+      "title": "Как блогеру принять и выполнить рекламный заказ",
+      "description": "Подробная инструкция по работе блогера в платформе Blogix"
+    },
+    "withdraw_funds": {
+      "title": "Как вывести средства",
+      "description": "Подробный гайд по выводу средств с вашего баланса. Инструкция поможет вам быстро и безопасно вывести средства с вашего баланса."
+    }
+  },
   "footer": {
     "results": {
       "users": "Всего пользователей",
@@ -41,8 +84,10 @@
       }
     },
     "contacts": {
-      "tech_contact": "Support",
-      "tech_title": "По техническим вопросам",
+      "advertiser_contact": "Telegram",
+      "advertiser_title": "Поддержка для рекламодателей 24/7",
+      "blogger_contact": "Telegram",
+      "blogger_title": "Поддержка для блогеров",
       "cooperation_contact": "Contact",
       "cooperation_title": "По вопросам сотрудничества",
       "email": "Telegram",
@@ -1993,6 +2038,7 @@
       "your_posts": "Ваши посты",
       "add_file": "Загрузить файл",
       "start_typing": "Начните печатать...",
+      "paste_text": "ВАЖНО! После вставки текста ОБЯЗАТЕЛЬНО проверьте форматирование, гиперссылки и отступы перед тем как продолжить.",
       "comment": "Комментарий блогеру...",
       "result": "Результат",
       "post": "Начните заполнять рекламный пост чтобы увидеть результат",
