--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2180,7 +2180,11 @@
     "channel": "канал",
     "new_message": "Написать сообщение...",
     "no_message": "Здесь пока ничего нет, напишите сообщение",
-    "chat_choose": "Выберите чат чтобы начать общение"
+    "chat_choose": "Выберите чат чтобы начать общение",
+    "file_upload": {
+      "title": "Загрузить файл",
+      "send": "Загрузить"
+    }
   },
 
   "notifications": {
