--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1870,6 +1870,19 @@
     "file_upload": {
       "title": "Upload File",
       "send": "Upload"
+    },
+    "format": {
+      "bold": "Bold",
+      "italic": "Italic",
+      "monospace": "Monospace",
+      "link": "Link",
+      "text": "Text",
+      "text_placeholder": "Enter text...",
+      "url_placeholder": "Enter URL (https://...)"
+    },
+    "actions": {
+      "cancel": "Cancel",
+      "apply": "Apply"
     }
   },
 
