feat: add new context menu items

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1875,6 +1875,8 @@
       "bold": "Bold",
       "italic": "Italic",
       "monospace": "Monospace",
+      "underline": "Underline",
+      "strike": "Strike",
       "link": "Link",
       "text": "Text",
       "text_placeholder": "Enter text...",
