--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2189,6 +2189,8 @@
       "bold": "Жирный",
       "italic": "Курсив",
       "monospace": "Моноширинный",
+      "underline": "Подчеркнутый",
+      "strike": "Зачеркнутый",
       "link": "Ссылка",
       "text": "Текст",
       "text_placeholder": "Введите текст...",
