--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1242,7 +1242,8 @@
         },
         "instruction": "Telegram botni sozlash bo'yicha batafsil qo'llanmani o'qish",
         "change_btn": "O'zgartirish",
-        "cancel_btn": "Bekor qilish"
+        "cancel_btn": "Bekor qilish",
+        "notification_link_button": "Telegramda bildirishnomalarni oling"
       },
       "continue_btn": "Davom etish"
     },
