--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1375,7 +1375,8 @@
         "system": "Системные сообщения",
         "project": "Уведомления о проектах",
         "individual": "Индивидуальные предложения и промо рассылки",
-        "enable_notifications": "Хотите подключить телеграм бота для уведомлений ?",
+        "enable_notifications": "Хотите подключить телеграм бота для уведомлений?",
+        "notification_link_button": "Получать уведомления в телеграм",
         "telegramm": {
           "title": "Введите ваш телеграм аккаунт",
           "default_value": "Sample@gmail.com"
