--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2224,7 +2224,12 @@
       "approve": "На согласование",
       "price": "Итоговая сумма:",
       "choose_wallet": "Выберите кошелек для оплаты проекта",
-      "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы"
+      "description": "Остался последний шаг для запуска эффективной рекламной кампании! Как только вы оплатите заказ, владельцы площадок моментально получат уведомления и начнут размещение вашей рекламы",
+      "expired_orders": {
+        "title": "Внимание!",
+        "description": "В проекте есть просроченные даты, перед запуском нужно обновить дату и время публикации постов",
+        "button": "Редактировать"
+      }
     },
     "save": "Сохранить проект",
     "loading": {
