--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2100,6 +2100,28 @@
       "withdraw_all": "Вывести все средства"
     }
   },
+  "unrealized_wallet": {
+    "action": {
+      "attention": "Внимание!",
+      "you_have_money": "У вас есть деньги на авансовом кошельке: ",
+      "button": "Подробнее"
+    },
+    "content": {
+      "title": "Авансовые средства",
+      "first_title": "Потенциально заработанные средства",
+      "first_description": "Это средства, которые уже закреплены за вами, но пока недоступны для вывода",
+      "second_title": "В эту сумму входят:",
+      "first_second_description": "оплаты по активным заказам, которые ещё не выполнены;",
+      "second_second_description": "ожидающие заказы, принятые выми, но не завершённые;",
+      "third_second_description": "выполненные заказы, по которым вы ещё не отправили счёт-фактуру и акт.",
+      "third_title": "Как получить эти средства?",
+      "third_description": "Чтобы деньги перешли на прибыльный кошелёк, необходимо:",
+      "third_description_option_1": "завершить все активные заказы;",
+      "third_description_option_2": "в выполненных заказах отправить счёт-фактуру и акт;",
+      "third_description_option_3": "дождаться подтверждения документов.",
+      "button": "Перейти в мои заказы"
+    }
+  },
   "wallet_history": {
     "wallet_history": "История транзакций",
     "tab": {
