--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2769,6 +2769,12 @@
           "moderationReject": "Канал не прошел модерацию",
           "remoderation": "Канал отправлен на повторную модерацию",
           "invalidUrl": "Некорректная ссылка на канал"
+        },
+        "channel_verfification_error": {
+          "code_not_found": "Верификационный код не найден. Нужно добавить код в описание канала",
+          "code_expired": "Верификационный код истек. Обновите страницу и попробуйте заново",
+          "channel_exist": "Такой канал уже существует. Обратитесь в техническую поддержку для получения помощи",
+          "code_dont_match": "Верификационный код не соответствует"
         }
       },
       "create": {
