--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2112,7 +2112,7 @@
       "first_description": "Это средства, которые уже закреплены за вами, но пока недоступны для вывода",
       "second_title": "В эту сумму входят:",
       "first_second_description": "оплаты по активным заказам, которые ещё не выполнены;",
-      "second_second_description": "ожидающие заказы, принятые выми, но не завершённые;",
+      "second_second_description": "ожидающие заказы, принятые вами, но не завершённые;",
       "third_second_description": "выполненные заказы, по которым вы ещё не отправили счёт-фактуру и акт.",
       "third_title": "Как получить эти средства?",
       "third_description": "Чтобы деньги перешли на прибыльный кошелёк, необходимо:",
@@ -2290,6 +2290,21 @@
     "file_upload": {
       "title": "Загрузить файл",
       "send": "Загрузить"
+    },
+    "format": {
+      "bold": "Жирный",
+      "italic": "Курсив",
+      "monospace": "Моноширинный",
+      "underline": "Подчеркнутый",
+      "strike": "Зачеркнутый",
+      "link": "Ссылка",
+      "text": "Текст",
+      "text_placeholder": "Введите текст...",
+      "url_placeholder": "Введите URL-адрес (https://...)"
+    },
+    "actions": {
+      "cancel": "Отмена",
+      "apply": "Применить"
     }
   },
   "notifications": {
