--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -2290,6 +2290,21 @@
     "file_upload": {
       "title": "Fayl yuklash",
       "send": "Yuklash"
+    },
+    "format": {
+      "bold": "Qalin",
+      "italic": "Kursiv",
+      "monospace": "Monokenglik",
+      "underline": "Yulqin",
+      "strike": "Chiqqin",
+      "link": "Havola",
+      "text": "Matn",
+      "text_placeholder": "Matnni kiritish...",
+      "url_placeholder": "URL-manzilni kiriting (https://...)"
+    },
+    "actions": {
+      "cancel": "Bekor qilish",
+      "apply": "Qo'llash"
     }
   },
   "notifications": {
