--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -239,6 +239,10 @@
         }
       ]
     },
+    "platforms": {
+      "title": "Мы работаем с крупнейшими площадками",
+      "subtitle": "Только проверенные каналы и блогеры"
+    },
     "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
     "services_list": [
       {
@@ -543,6 +547,10 @@
           "option": "Быстрая и легальная система вывода средств"
         }
       ]
+    },
+    "platforms": {
+      "title": "Мы работаем с крупнейшими площадками",
+      "subtitle": "Только проверенные каналы и блогеры"
     },
     "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
     "services_list": [
