feat: add premium amount

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -159,7 +159,7 @@
     },
     "login_premium_access": {
       "title": "Хотите увидеть еще больше ?",
-      "description": "Для этого необходимо чтобы на вашем балансе было не менее <0>5.000.000 сум</0>",
+      "description": "Для этого необходимо чтобы на вашем балансе было не менее <0>{{balance}} сум</0>",
       "options": [
         {
           "title": "Полный доступ к базе блогеров"
@@ -1911,7 +1911,7 @@
       }
     },
     "card_premium_access": {
-      "description": "Чтобы получить <0>полный доступ</0> к базе блогеров и функционалу платформы необходимо чтобы ваш баланс был не менее  <1>5.000.000 сум</1>",
+      "description": "Чтобы получить <0>полный доступ</0> к базе блогеров и функционалу платформы необходимо чтобы ваш баланс был не менее  <1>{{balance}} сум</1>",
       "buttons": {
         "balance": "Пополнить баланс"
       }
