--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -158,7 +158,7 @@
     },
     "login_premium_access": {
       "title": "Want to see even more?",
-      "description": "To access this, you need to have at least <0>5,000,000 UZS</0> on your balance",
+      "description": "To access this, you need to have at least <0>{{balance}} UZS</0> on your balance",
       "options": [
         {
           "title": "Full access to the blogger database"
@@ -1910,7 +1910,7 @@
       }
     },
     "card_premium_access": {
-      "description": "To get <0>full access</0> to the blogger database and platform features, your balance must be at least <1>5,000,000 UZS</1>",
+      "description": "To get <0>full access</0> to the blogger database and platform features, your balance must be at least <1>{{balance}} UZS</1>",
       "buttons": {
         "balance": "Top up balance"
       }
