--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2788,6 +2788,10 @@
         "sign": {
           "success": "Операция проведена",
           "error": "Ошибка во время проведения операции"
+        },
+        "unsign": {
+          "success": "Операция отменена",
+          "error": "Ошибка во время отмены операции"
         }
       },
       "review": {
@@ -3536,7 +3540,9 @@
         },
         "buttons": {
           "sign": "Подписать",
-          "signed": "Подписан"
+          "signed": "Подписан",
+          "unsign": "Отменить",
+          "unsigned": "Отменен"
         }
       }
     }
